force-app/main/default/objects/Product__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <inlineHelpText>Available stock quantity for operational monitoring.</inlineHelpText>
    <label>Stock Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>