force-app/main/default/objects/Product__c/validationRules/Product_Stock_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Stock_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents negative stock values.</description>
    <errorConditionFormula>Stock_Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Stock_Quantity__c</errorDisplayField>
    <errorMessage>Stock quantity cannot be negative.</errorMessage>
</ValidationRule>